# GMLAST

./: .clang-format  CMakeLists.txt  LICENSE  README.md
cmake/: FindREFLEX.cmake
doc/: AST.dot  CMakeLists.txt  DoStatement.dot  Doxyfile.in  ForStatement.dot  GMLAST.css  GMLAST.dot  IfStatement.dot  IfStatementWithElse.dot  WhileStatement.dot  dox.h
include/GMLAST/AST/: ArrayOperator.hpp  AssignStatement.hpp  Base.hpp  BinaryOperator.hpp  BreakStatement.hpp  ContinueStatement.hpp  DeclarationEntry.hpp  DeclarationStatement.hpp  DefaultVisitor.hpp  DoStatement.hpp  DotOperator.hpp  DoubleConstant.hpp  EnumEntry.hpp  EnumStatement.hpp  Error.hpp  ExitStatement.hpp  ForStatement.hpp  FunctionCall.hpp  IVisitor.hpp  IfStatement.hpp  IntConstant.hpp  NodeType.hpp  RepeatStatement.hpp  ReturnStatement.hpp  Statement.hpp  Statements.hpp  StringConstant.hpp  SwitchCase.hpp  SwitchEntry.hpp  SwitchStatement.hpp  UnuaryOperator.hpp  Value.hpp  Variable.hpp  WhileStatement.hpp  WithStatement.hpp
include/GMLAST/Lexer/: ILexer.hpp  Lexer.hpp  Token.hpp
include/GMLAST/Parser/: Parser.hpp  ParserException.hpp  ValidationEntry.hpp
include/GMLAST/Utils/: ILogger.hpp  IStream.hpp  Location.hpp
src/: CMakeLists.txt
src/GMLAST/: CMakeLists.txt
src/GMLAST/AST/: ArrayOperator.cpp  AssignStatement.cpp  BinaryOperator.cpp  BreakStatement.cpp  ContinueStatement.cpp  DeclarationEntry.cpp  DeclarationStatement.cpp  DefaultVisitor.cpp  DoStatement.cpp  DotOperator.cpp  DoubleConstant.cpp  EnumEntry.cpp  EnumStatement.cpp  Error.cpp  ExitStatement.cpp  ForStatement.cpp  FunctionCall.cpp  IfStatement.cpp  IntConstant.cpp  RepeatStatement.cpp  ReturnStatement.cpp  Statements.cpp  StringConstant.cpp  SwitchCase.cpp  SwitchEntry.cpp  SwitchStatement.cpp  UnuaryOperator.cpp  Variable.cpp  WhileStatement.cpp  WithStatement.cpp
src/GMLAST/Lexer/: DefaultLexer.cpp  DefaultLexer.hpp  DefaultLexer.l  Lexer.cpp  NullBuffer.hpp  NullStream.hpp  Token.cpp
src/GMLAST/Parser/: DefaultParser.cpp  DefaultParser.hpp  Expression.cpp  IsLValue.cpp  IsLValue.hpp  Parser.cpp  SyntaxChecker.cpp  SyntaxChecker.hpp
src/GMLAST/Utils/: MemoryHelper.hpp  ReferenceLogger.hpp  UniquePtrHelper.hpp
test/: CMakeLists.txt
test/ParserTest/: CMakeLists.txt  JsonSerializer.cpp  JsonSerializer.hpp  Parser.cpp  RandomLexer.cpp  RandomLexer.hpp
test/TypeTest/: TypeTest.cpp
test/data/: testdata.hpp.in
test/data/tests/: BinaryOperator.test.json  DeclarationStatement.test.json  DotOperator.test.json  DoubleConstant.test.json  ExitStatement.test.json  ForStatement.test.json  RepeatStatement.test.json  Statements.test.json  SwitchStatement.test.json
test/src/: JsonSerializer.cpp  JsonSerializer.hpp  Parser.cpp  RandomLexer.cpp  RandomLexer.hpp  TypeTest.cpp
testdata/: CMakeLists.txt
testdata/scripts/: implode_real.gml
testdata/tests/: ArrayOperator.test.json  AssignStatement.test.json  BinaryOperator.test.json  BreakStatement.test.json  ContinueStatement.test.json  DoStatement.test.json  DotOperator.test.json  DoubleConstant.test.json  EnumStatement.test.json  ForStatement.test.json  FunctionCall.test.json  IfStatement.test.json  IntConstant.test.json  RepeatStatement.test.json  Statements.test.json  StringConstant.test.json  SwitchStatement.test.json  UnuaryOperator.test.json  Variable.test.json  WhileStatement.test.json  WithStatement.test.json
